[build-system]
requires = ["setuptools>=67.7"]
build-backend = "setuptools.build_meta"

[project]
name = "ADExplorerDump.py"
version = "0.0.1"
authors = [
    { name="Phil Wilcox", email="phil.wilcox@cyberis.com" }
]
description = "A package to dump selected data from ADExplorerSnapshot.py JSON output"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/DevilToad/ADExplorerDump.py"
"Bug Tracker" = "https://github.com/DevilToad/ADExplorerDump.py/issues"